style.css
@keyframes fadeIn 
{ 
	from 
	{ 
		opacity:0; 
	} 
	to 
	{ 
		opacity:1; 
	} 
}

body {
	font-family: 'Coolvetica', sans-serif;
	background-color: #57078E;
	font-size: 18px;
	color: #ffffff;
}
//vw, vh, vmin, vmax
h1 {
	margin-left: 100px;
	width: 700px;
	font-size: 5em;
	opacity:0;
  animation:fadeIn ease-in 1;
  animation-fill-mode:forwards;
  animation-duration:1s;
  animation-delay: 0.5s;
}

h2 {
	margin-left: 670px;
	height: 0px;
}

div {
	column-width: 500px;
	
	
}

#bio {
	margin-left: 15px;
	width: 500px;
	font-size: 2em;
}

#bullets {
	margin-top: -50px;
	margin-left: -230px;
	width: 850px;
	font-size: 1.35em;
}

#lonely {
	font-size: 1.15em;
	margin-top: 280px;
	margin-left: 200px;
}

p {

  opacity:0;
  animation:fadeIn ease-in 1;
  animation-fill-mode:forwards;
  animation-duration:1.0s;
  animation-delay: 1.0s;
}
table {
  opacity:0;
  animation:fadeIn ease-in 1;
  animation-fill-mode:forwards;
  animation-duration:1.0s;
  animation-delay: 1.0s;
}

@keyframes slidein {
	from {
		margin-left: 2000px;
	}
	to {
		margin-left: 0px;
	}
}

span {
	animation-duration: 3s;
	animation-name: slidein;
	margin-left: 0px;
}

a:hover {
	color: #000;  
}

a img:hover{
    filter: invert(100%);
}

a {
	color: #ffffff;
	transition:.5s;
}

a img{
    padding: 5px;
	transition:.5s;
}

